--- a/DL_cn/第1章.md
+++ b/DL_cn/第1章.md
@@ -66,3 +66,78 @@
 几乎与获得原问题的表示一样困难，因此，乍一看，表示学习似乎并不能帮助我们。
 深度学习（deep learning）通过其他较简单的表示来表达复杂表示，解决了表
 示学习中的核心问题。
+
+深度学习让计算机通过较简单概念构建复杂的概念
+
+
+
+这本书的主题——深度学习是通向人工智能的途径之一。具体来说，它
+是机器学习的一种，一种能够使计算机系统从经验和数据中得到提高的技术。我们
+坚信机器学习可以构建出在复杂实际环境下运行的 AI 系统
+
+深度学习是一种特定类型的机器学习，具有强大的能力和灵活性，它将大千
+世界表示为嵌套的层次概念体系（由较简单概念间的联系定义复杂概念、从一般抽
+象概括到高级抽象表示）。
+
+
+
+如今神经科学在深度学习研究中的作用被削弱，主要原因是我们根本没有足够
+的关于大脑的信息来作为指导去使用它。要获得对被大脑实际使用算法的深刻理解，
+我们需要有能力同时监测（至少是）数千相连神经元的活动。我们不能够做到这一
+点，所以我们甚至连大脑最简单、最深入研究的部分都还远远没有理解 (Olshausen
+and Field, 2005)。 ---- 现在GPU技术是否解决了这个问题？？？--> 是否已经有能力同时监测（至少是）数千相连神经元的活动 --- goLang 协程技术是否是一种代替？？
+
+
+
+
+我们能够从神经科学得到一些粗略的指南。仅通过计算单元之间的相互作用而
+变得智能的基本思想是受大脑启发的。新认知机 (Fukushima, 1980) 受哺乳动物视
+觉系统的结构启发，引入了一个处理图片的强大模型架构，它后来成为了现代卷积
+网络的基础 (LeCun et al., 1998c)（我们将会在第 9.10 节看到）。目前大多数神经网
+络是基于一个称为 整流线性单元（rectified linear unit）的神经单元模型。原始认
+知机 (Fukushima, 1975) 受我们关于大脑功能知识的启发，引入了一个更复杂的版
+本。
+
+
+
+值得注意的是，了解大脑是如何在算法层面上工作的尝试确实存在且发展良好。
+这项尝试主要被称为 ‘‘计算神经科学’’，并且是独立于深度学习的领域。研究人员在
+两个领域之间来回研究是很常见的。深度学习领域主要关注如何构建计算机系统，
+从而成功解决需要智能才能解决的任务，而计算神经科学领域主要关注构建大脑如
+何真实工作的比较精确的模型。
+
+
+
+   联结主义的中心思想是，当网络将大量简单的计算单元连接在一起时可以实现
+智能行为。这种见解同样适用于生物神经系统中的神经元，因为它和计算模型中隐
+藏单元起着类似的作用。
+   其中一个概念是 分布式表示（distributed representation）(Hinton et al., 1986)。
+其思想是：系统的每一个输入都应该由多个特征表示，并且每一个特征都应该参与
+到多个可能输入的表示。例如，假设我们有一个能够识别红色、绿色、或蓝色的汽
+车、卡车和鸟类的视觉系统，表示这些输入的其中一个方法是将九个可能的组合：红
+卡车，红汽车，红鸟，绿卡车等等使用单独的神经元或隐藏单元激活。这需要九个
+不同的神经元，并且每个神经必须独立地学习颜色和对象身份的概念。改善这种情
+况的方法之一是使用分布式表示，即用三个神经元描述颜色，三个神经元描述对象
+身份。这仅仅需要 6 个神经元而不是 9 个，并且描述红色的神经元能够从汽车、卡
+车和鸟类的图像中学习红色，而不仅仅是从一个特定类别的图像中学习。分布式表
+示的概念是本书的核心，我们将在第十五章中更加详细地描述。（goLang语言的协程）
+
+
+
+截至 2016 年，一个粗略的经验法则是，监督深度学习算法在
+每类给定约 5000 个标注样本情况下一般将达到可以接受的性能，当至少有 1000 万
+个标注样本的数据集用于训练时，它将达到或超过人类表现。
+
+
+
+联结主义的
+主要见解之一是，当动物的许多神经元一起工作时会变得聪明。单独神经元或小集
+合的神经元不是特别有用。
+
+
+### 技术突破了
+自从隐藏单元引入以来，人工神经网络的规模大约每 2.4 年扩大一倍。这种增长是由
+更大内存、更快的计算机和更大的可用数据集驱动的。更大的网络能够在更复杂的
+任务中实现更高的精度。这种趋势看起来将持续数十年。除非有能力迅速扩展的新
+技术，否则至少要到 21 世纪 50 年代，人工神经网络将才能具备与人脑相同数量级
+的神经元。
