AI知识概念与AI环境操作笔记

--- a/Python机器学习入门与实战/第2章.md
+++ b/Python机器学习入门与实战/第2章.md
@@ -57,3 +57,12 @@ beta  |  产生beta分布的样本值   
 chisquare  |  产生卡方分布的样本值    
 gamma  |  产生gamma分布的样本值    
 uniform  |  产生在[0,1)中均匀分布的样本值  
+
+
+### Numpy 模块中数组的广播
+数组对机器学习来说，最重要的作用在于不用编写循环即可对数据进行批量运算。这通常就叫作矢量化（vectorization)。大小相等的数组之间的任何算术运算都会被应用到元素级。
+
+
+INFO： task Xorg:1917 blocked for more than 120 seconds. signatures...
+Tainted: P    W  O    6.5.0-18-gener ic #18~22.04.1-Ubuntu
+"echo 0 > /proc/syskernel/hug_task_timeout_secs" disables this message.
