--- a/AI知识概念/模型下载.md
+++ b/AI知识概念/模型下载.md
@@ -32,6 +32,19 @@ huggingface-cli download \
     ggml-model-Q4_K.gguf \
     --local-dir ./ \
     --local-dir-use-symlinks False
+
+huggingface-cli download \
+    openbmb/MiniCPM-Llama3-V-2_5-gguf \
+    mmproj-model-f16.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+
+huggingface-cli download \
+    bartowski/Codestral-22B-v0.1-GGUF \
+    Codestral-22B-v0.1-Q3_K_S.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False    
 ```
 
 ### 导入 ollama
