笔记整理与修改

--- a/Python机器学习入门与实战/第2章.md
+++ b/Python机器学习入门与实战/第2章.md
@@ -61,3 +61,7 @@ uniform  |  产生在[0,1)中均匀分布的样本值 
 
 ### Numpy 模块中数组的广播
 数组对机器学习来说，最重要的作用在于不用编写循环即可对数据进行批量运算。这通常就叫作矢量化（vectorization)。大小相等的数组之间的任何算术运算都会被应用到元素级。
+
+
+### 索引用法
+在一个二维数组中，各索引位置上的元素是一维数组，再对一维 数组中的元素进行递归访问，一般都会用arr[0][2]来表示，也可以传 入一个以逗号隔开的索引列表来选取单个元素，如arr[0,2]
