Qwen2 资料与python资料

--- a/python语法学习/Python学习手册（原书第4版）/模块.md
+++ b/python语法学习/Python学习手册（原书第4版）/模块.md
@@ -4,3 +4,13 @@
 ### 语言概念
 
 * 模块和类实际上就是一个重要的命名空间
+
+* 每一个文件都是一个模块
+
+    import  
+    使客户端（导入者）以一个整体获取一个模块  
+    from  
+    允许客户端从一个模块中获取：特定的变量名  
+
+
+### 为什么使用模块
