--- a/AI知识概念/模型下载.md
+++ b/AI知识概念/模型下载.md
@@ -7,7 +7,7 @@ pip3 install huggingface-hub
 huggingface-cli download \
   Rookie/Llama-3-8B-Instruct-Chinese \
   ggml-model-Q5_1.gguf \
-  --local-dir /llm_models \
+  --local-dir ./ \
   --local-dir-use-symlinks False
 
 
@@ -29,7 +29,7 @@ huggingface-cli download \
 
 huggingface-cli download \
     openbmb/MiniCPM-Llama3-V-2_5-gguf \
-    ggml-model-Q4_K.gguf \
+    ggml-model-Q6_K.gguf \
     --local-dir ./ \
     --local-dir-use-symlinks False
 
@@ -41,10 +41,35 @@ huggingface-cli download \
 
 
 huggingface-cli download \
-    bartowski/Codestral-22B-v0.1-GGUF \
-    Codestral-22B-v0.1-Q3_K_S.gguf \
+    microsoft/Florence-2-large \
+    modeling_florence2.py \
     --local-dir ./ \
-    --local-dir-use-symlinks False    
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    shenzhi-wang/Llama3-8B-Chinese-Chat-GGUF-8bit \
+    Llama3-8B-Chinese-Chat-q8_0-v2_1.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    shenzhi-wang/Llama3-8B-Chinese-Chat-GGUF-4bit \
+    Llama3-8B-Chinese-Chat-q4_0-v2_1.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    stabilityai/stable-diffusion-3-medium \
+    sd3_medium.safetensors \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    --token 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 \
+    stabilityai/stable-diffusion-3-medium \
+    sd3_medium.safetensors \ 
+    --local-dir ./ \
+    --local-dir-use-symlinks False
 ```
 
 ### 导入 ollama
