--- a/AI知识概念/模型下载.md
+++ b/AI知识概念/模型下载.md
@@ -104,6 +104,14 @@ huggingface-cli download \
     Mistral-Nemo-Instruct-2407-Q5_K_S.gguf \
     --local-dir ./ \
     --local-dir-use-symlinks False
+
+
+
+huggingface-cli download \
+    lmstudio-community/Meta-Llama-3.1-70B-Instruct-GGUF \
+    Meta-Llama-3.1-70B-Instruct-Q3_K_M.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
 ```
 
 ### 导入 ollama
