--- a/AI知识概念/模型下载.md
+++ b/AI知识概念/模型下载.md
@@ -114,6 +114,44 @@ huggingface-cli download \
     --local-dir-use-symlinks False
 
 
+huggingface-cli download \
+    Comfy-Org/flux1-dev \
+    flux1-dev-fp8.safetensors \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    stabilityai/stable-diffusion-xl-refiner-1.0 \
+    sd_xl_refiner_1.0.safetensors \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    boricuapab/flux1-fill-dev-fp8 \
+    flux1-fill-dev-fp8.safetensors \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    city96/FLUX.1-dev-gguf \
+    flux1-dev-Q5_1.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+
+huggingface-cli download \
+    autismanon/modeldump \
+    dreamshaper_8.safetensors \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+
+huggingface-cli download \
+    SG161222/Realistic_Vision_V6.0_B1_noVAE \
+    Realistic_Vision_V6.0_NV_B1.safetensors \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
 
 ```
 
