笔记更新(含 ollama 配置)

--- a/AI知识概念/模型下载.md
+++ b/AI知识概念/模型下载.md
@@ -147,11 +147,23 @@ huggingface-cli download \
 
 
 huggingface-cli download \
-    SG161222/Realistic_Vision_V6.0_B1_noVAE \
-    Realistic_Vision_V6.0_NV_B1.safetensors \
+    Zyphra/Zonos-v0.1-hybrid \
+    config.json \
     --local-dir ./ \
     --local-dir-use-symlinks False
 
+
+huggingface-cli download \
+    bartowski/mistralai_Mistral-Small-3.1-24B-Instruct-2503-GGUF \
+    mistralai_Mistral-Small-3.1-24B-Instruct-2503-Q6_K_L.gguf \
+    --local-dir ./ \
+    --local-dir-use-symlinks False
+
+huggingface-cli download \
+    bartowski/mistralai_Mistral-Small-3.1-24B-Instruct-2503-GGUF \
+    mistralai_Mistral-Small-3.1-24B-Instruct-2503-Q6_K_L.gguf
+    --local-dir ./ \
+    --local-dir-use-symlinks False
 
 ```
 
