引入 obsidian 后，调整与修改

--- a/AI知识概念/模型下载.md
+++ b/AI知识概念/模型下载.md
@@ -147,8 +147,8 @@ huggingface-cli download \
 
 
 huggingface-cli download \
-    Zyphra/Zonos-v0.1-hybrid \
-    config.json \
+    bartowski/THUDM_GLM-4-32B-0414-GGUF \
+    THUDM_GLM-4-32B-0414-Q4_K_L.gguf \
     --local-dir ./ \
     --local-dir-use-symlinks False
 
@@ -160,8 +160,8 @@ huggingface-cli download \
     --local-dir-use-symlinks False
 
 huggingface-cli download \
-    bartowski/mistralai_Mistral-Small-3.1-24B-Instruct-2503-GGUF \
-    mistralai_Mistral-Small-3.1-24B-Instruct-2503-Q6_K_L.gguf
+    google/gemma-3-27b-it-qat-q4_0-gguf \
+    gemma-3-27b-it-q4_0.gguf \
     --local-dir ./ \
     --local-dir-use-symlinks False
 
