--- a/Obsidian操作学习/进阶.md
+++ b/Obsidian操作学习/进阶.md
@@ -15,16 +15,9 @@
 
 ### 3. **数学公式**
 
-- **行内数学公式**：使用 `$数学公式$` 插入行内数学公式，例如 `$E=mc^2$`7。
+- **行内数学公式**：使用 `$数学公式$` 插入行内数学公式，例如 $E=mc^2$。
 - **块级数学公式**：使用 `$$数学公式$$` 插入块级数学公式，例如：
-
-    
-    ```text
-    undefined
-    ```
-    
-
-∫abf(x) dx=F(b)−F(a)
+	∫abf(x) dx=F(b)−F(a)
 
 
 ### 4. **Mermaid 图表**
@@ -38,6 +31,17 @@ graph TD;
 ````
 
 
+```mermaid
+graph LR
+emperor((朱八八))-.子.->朱五四-.子.->朱四九-.子.->朱百六
+朱雄英--长子-->朱标--长子-->emperor
+emperor2((朱允炆))--次子-->朱标
+朱樉--次子-->emperor
+朱棡--三子-->emperor
+emperor3((朱棣))--四子-->emperor
+emperor4((朱高炽))--长子-->emperor3
+```
+
 - **时序图**：使用 Mermaid 语法创建时序图，例如：
     
     mermaid
@@ -49,7 +53,12 @@ graph TD;
         Alice->>Bob: Hello Bob, how are you?
         Bob-->>Alice: Not too bad, thanks for asking.
     ```
-    
+
+
+```            
+
+```
+
 
 ### 5. **Callout 模块**
 
@@ -106,6 +115,51 @@ def hello_world():
 
 ### 12. **LaTeX**
 
+- - **Latex** 主要用来书写 **数学公式** 与 **化学公式**
 - **插入 LaTeX**：Obsidian 支持使用 LaTeX 语法插入数学公式和符号，例如 `$\alpha$`、`$\beta$` 等1。
 
 这些高级语法可以帮助你在 Obsidian 中创建更丰富、更结构化的笔记，提高知识管理的效率。
+#### 12.1 行内公式
+- **格式：**
+	-  $ + 行内公式 + $
+	- **示例：**
+		- **`$x^2 + 2x + 5 + \sqrt x = 0$`**
+		- **`$\ce{CO2 + C -> 2 CO}$`**
+	- 效果
+		$x^2 + 2x + 5 + \sqrt x = 0$
+		$\ce{CO2 + C -> 2 CO}$
+
+
+
+### 13. 甘特图
+- **源码：**
+```mermaid
+gantt
+    title A Gantt Diagram
+    dateFormat  YYYY-MM-DD
+    section Section
+    A task           :a1, 2014-01-01, 30d
+    Another task     :after a1  , 20d
+    section Another
+    Task in sec      :2014-01-12  , 12d
+    another task      : 24d
+```
+
+
+### 14. 顺序图 (时序图)
+- 源码
+
+
+### 15.  饼图
+
+```mermaid
+pie
+    title 为什么总是宅在家里？
+    "喜欢宅" : 45
+    "天气太热" : 70
+    "穷" : 500
+	"关你屁事" : 95
+```
+
+
+[^1]: 脚注内容
