笔记修改保存

--- a/Obsidian操作学习/进阶.md
+++ b/Obsidian操作学习/进阶.md
@@ -9,9 +9,13 @@
 
 ### 2. **嵌入笔记**
 
+^681a97
+
 - **嵌入整个笔记**：使用 `![[笔记名称]]` 将其他笔记的内容嵌入到当前笔记中9。
 - **嵌入特定标题**：使用 `![[笔记名称#标题]]` 嵌入其他笔记中的特定标题内容9。
 - **嵌入特定内容块**：使用 `![[笔记名称^块ID]]` 嵌入其他笔记中的特定内容块9。
+	- [[进阶#2. **嵌入笔记**]] 
+	- [[进阶#^681a97]]
 
 ### 3. **数学公式**
 
