--- a/Mac/快捷键.md
+++ b/Mac/快捷键.md
@@ -7,14 +7,20 @@ https://support.apple.com/zh-cn/102650
 
 
 ##### 最小化
-command + M
+command + M   将最前方的窗口最小化至程序坞。
+要最小化最前方 App 的所有窗口，请按 Option-Command-M
 ##### 隐藏当前软件窗口
 command + H
+##### 关闭窗口
+**Command-W**：关闭最前方的窗口。要关闭 App 的所有窗口，请按下 Option-Command-W
 ##### 返回桌面
 command + option + H + M
 这个在windows下经常用，开了太多的窗口，想全部隐藏
 ##### 全屏模式切换
 command + control + F
+##### 同一软件的不同窗口切换
+command + ~
+在你当前所用 App 的各个窗口之间切换
 ##### 
 
 ##### 
